# particle

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build-release.sh  build.zig  run-fixture.sh
_fixtures_/project-a/: particle.config.json
src/: constants.rs  lib.rs  main.rs  utils.rs
src/commands/: check.rs  mod.rs  run.rs  workspace.rs
src/commands/check/: get_highest_compatible_version.rs
src/commands/workspace/: mod.rs
src/utils/: mod.rs  printer.rs
tests/: check.rs  no_config.rs  run.rs  workspace_run.rs
tests/test_utils/: mod.rs
