[package]
name = "particle"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.20", features = ["derive"] }
colored = "2.0.0"
glob = "0.3.0"
run_script = "^0.10.0"
serde = { version = "1.0.0", features = ["derive"] }
serde_json = "1.0.0"
